# NX_Translator

./: README.md  __init__.py  pyproject.toml  requirements.txt
js/: Nx_Tranlator.js
